--- a/reference.bib
+++ b/reference.bib
@@ -37,7 +37,6 @@
 }
 
 
-
 @article{Adams2009,
   author  = {Adams, Andrew and Gelfand, Natasha and Dolson, Jennifer and Levoy, Marc},
   title   = {Gaussian {KD-trees} for fast high-dimensional filtering},
@@ -58,13 +57,13 @@
 }
 
 
-
 @inproceedings{Adamson2003,
   author    = {Adamson, Anders and Alexa, Marc},
   title     = {Approximating and intersecting surfaces from points},
   booktitle = SGPOLD,
   year      = {2003}
 }
+
 
 
 @article{Adikusuma2020,
@@ -75,6 +74,7 @@
   number  = {2},
   year    = {2020}
 }
+
 
 @inproceedings{Afouras2018,
   author    = {Afouras, Triantafyllos and Chung, Joon Son and Zisserman, Andrew},
@@ -89,7 +89,6 @@
   booktitle = NeurIPS,
   year      = {2020}
 }
-
 
 @article{Alhashim2012,
   author  = {Alhashim, Ibraheem and Zhang, Hao and Liu, Ligang},
@@ -124,13 +123,13 @@
   year      = {2019}
 }
 
+
 @inproceedings{Armeni2016,
   title     = {{3D} Semantic Parsing of Large-Scale Indoor Spaces},
   author    = {Iro Armeni and Ozan Sener and Amir R. Zamir and Helen Jiang and Ioannis Brilakis and Martin Fischer and Silvio Savarese},
   booktitle = CVPR,
   year      = {2016}
 }
-
 
 @article{Armeni2017,
   title   = {Joint {2D-3D}-Semantic Data for Indoor Scene Understanding},
@@ -211,13 +210,13 @@
   year    = {2016}
 }
 
+
 @article{Ba2016,
   title   = {Layer normalization},
   author  = {Ba, Jimmy Lei and Kiros, Jamie Ryan and Hinton, Geoffrey E},
   journal = {arXiv preprint arXiv:1607.06450},
   year    = {2016}
 }
-
 
 @article{Badrinarayanan2017,
   author  = {Badrinarayanan, Vijay and Kendall, Alex and Cipolla, Roberto},
@@ -514,13 +513,13 @@
   number  = {4}
 }
 
+
 @inproceedings{Cao2018,
   author    = {Cao, Yan-Pei and Liu, Zheng-Ning and Kuang, Zheng-Fei and Kobbelt, Leif and Hu, Shi-Min},
   title     = {Learning to reconstruct high-quality {3D} shapes with cascaded fully convolutional networks},
   booktitle = ECCV,
   year      = {2018}
 }
-
 
 @inproceedings{Caron2018,
   author    = {Caron, Mathilde and Bojanowski, Piotr and Joulin, Armand and Douze, Matthijs},
@@ -545,13 +544,13 @@
   year    = {2015}
 }
 
+
 @inproceedings{Chang2017,
   author    = {Chang, Angel and Dai, Angela and Funkhouser, Thomas and Halber, Maciej and Niessner, Matthias and Savva, Manolis and Song, Shuran and Zeng, Andy and Zhang, Yinda},
   title     = {{Matterport3D}: Learning from {RGB-D} Data in Indoor Environments},
   booktitle = threeDV,
   year      = {2017}
 }
-
 
 @inproceedings{Chellapilla2006,
   author    = {Chellapilla, Kumar and Puri, Sidd and Simard, Patrice},
@@ -614,13 +613,13 @@
   year      = {2019}
 }
 
+
 @inproceedings{Chen2019a,
   author    = {Zhiqin Chen and Kangxue Yin and Matthew Fisher and Siddhartha Chaudhuri and Hao Zhang},
   title     = {{BAE-NET}: Branched autoencoder for shape co-segmentation},
   booktitle = ICCV,
   year      = {2019}
 }
-
 
 @inproceedings{Chen2020,
   title     = {A simple framework for contrastive learning of visual representations},
@@ -637,6 +636,7 @@
   year      = {2020}
 }
 
+
 @inproceedings{Chen2020b,
   title     = {A hierarchical graph network for {3D} object detection on point clouds},
   author    = {Chen, Jintai and Lei, Biwen and Song, Qingyu and Ying, Haochao and Chen, Danny Z and Wu, Jian},
@@ -651,13 +651,13 @@
   year      = {2021}
 }
 
-
 @inproceedings{Chen2022,
   title     = {Scaling up Kernels in {3D CNNs}},
   author    = {Yukang Chen and Jianhui Liu and Xiaojuan Qi and X. Zhang and Jian Sun and Jiaya Jia},
   booktitle = NeurIPS,
   year      = {2022}
 }
+
 
 @inproceedings{Cheng2021,
   title     = {Back-Tracing Representative Points for Voting-based {3D} Object Detection in Point Clouds},
@@ -666,13 +666,13 @@
   year      = {2021}
 }
 
-
 @inproceedings{Cheng2022,
   title     = {{PatchFormer}: A versatile {3D} transformer based on patch attention},
   author    = {Cheng, Zhang and Wan, Haocheng and Shen, Xinyi and Wu, Zizhao},
   booktitle = CVPR,
   year      = {2021}
 }
+
 
 @inproceedings{Chiang2019,
   title     = {A unified point-based framework for {3D} segmentation},
@@ -687,7 +687,6 @@
   booktitle = CVPR,
   year      = {2020}
 }
-
 
 @article{Cho2014,
   author  = {Cho, Hojin and Lee, Hyunjoon and Kang, Henry and Lee, Seungyong},
@@ -705,6 +704,7 @@
   booktitle = ECCV,
   year      = {2016}
 }
+
 
 @inproceedings{Choy2019,
   author    = {Choy, Christopher and Gwak, JunYoung and Savarese, Silvio},
@@ -790,13 +790,13 @@
   number  = {3}
 }
 
-
 @inproceedings{Crane2013,
   author    = {Keenan Crane and Fernando de Goes and Mathieu Desbrun and Peter Schr\"{o}der},
   title     = {Digital geometry processing with discrete exterior calculus},
   booktitle = {ACM SIGGRAPH 2013 courses},
   year      = {2013}
 }
+
 
 @article{Crane2013a,
   title   = {Geodesics in heat: A new approach to computing distance based on heat flow},
@@ -807,13 +807,13 @@
   year    = {2013}
 }
 
-
 @misc{cublas2022,
   title        = {{cuBLAS}},
   author       = {cuBLAS},
   howpublished = {\url{https://docs.nvidia.com/cuda/cublas}},
   year         = {2022}
 }
+
 
 @inproceedings{Curless1996,
   author    = {Curless, Brian and Levoy, Marc},
@@ -868,13 +868,13 @@
   number  = {1}
 }
 
-
 @inproceedings{Deng2009,
   author    = {Jia Deng and Wei Dong and Richard Socher and Jia Li and Kai Li and Li Fei-Fei},
   title     = {{ImageNet}: A large-scale hierarchical image database},
   booktitle = CVPR,
   year      = {2009}
 }
+
 
 @inproceedings{Deng2018,
   title     = {{PPF-FoldNet}: Unsupervised learning of rotation invariant 3D local descriptors},
@@ -897,7 +897,6 @@
   year    = {2018}
 }
 
-
 @article{Diebel2006,
   author  = {Diebel, James R. and Thrun, Sebastian and Br\"{u}nig, Michael},
   title   = {A Bayesian method for probable surface reconstruction and decimation},
@@ -906,6 +905,7 @@
   volume  = {25},
   number  = {1}
 }
+
 
 @inproceedings{Doersch2015,
   author    = {Doersch, Carl and Gupta, Abhinav and Efros, Alexei A},
@@ -1075,7 +1075,6 @@
   year      = {2000}
 }
 
-
 @article{Fuhrmann2014,
   author  = {Fuhrmann, Simon and Goesele, Michael},
   title   = {Floating scale surface reconstruction},
@@ -1084,6 +1083,7 @@
   volume  = {33},
   number  = {4}
 }
+
 
 @article{Furuya2019,
   author  = {Takahiko Furuya and Ryutarou Ohbuchi},
@@ -1114,7 +1114,6 @@
   year      = {2017}
 }
 
-
 @inproceedings{Genova2020,
   title     = {Local Deep Implicit Functions for {3D} Shape},
   author    = {Genova, Kyle and Cole, Forrester and Sud, Avneesh and Sarna, Aaron and Funkhouser, Thomas},
@@ -1128,6 +1127,16 @@
   author    = {Gilmer, Justin and Schoenholz, Samuel S and Riley, Patrick F and Vinyals, Oriol and Dahl, George E},
   booktitle = ICML,
   year      = {2017}
+}
+
+
+@article{Gingold1977,
+  title   = {Smoothed particle hydrodynamics: theory and application to non-spherical stars},
+  author  = {Gingold, Robert A. and Monaghan, Joseph J.},
+  journal = {Monthly Notices of the Royal Astronomical Society},
+  volume  = {181},
+  number  = {3},
+  year    = {1977}
 }
 
 @inproceedings{Girdhar2016,
