--- a/reference.bib
+++ b/reference.bib
@@ -65,7 +65,6 @@
 }
 
 
-
 @article{Adikusuma2020,
   title   = {Fast construction of discrete geodesic graphs},
   author  = {Adikusuma, Yohanes Yudhi and Fang, Zheng and He, Ying},
@@ -76,12 +75,14 @@
 }
 
 
+
 @inproceedings{Afouras2018,
   author    = {Afouras, Triantafyllos and Chung, Joon Son and Zisserman, Andrew},
   booktitle = {INTERSPEECH},
   title     = {The conversation: Deep audio-visual speech enhancement},
   year      = {2018}
 }
+
 
 @inproceedings{Alayrac2020,
   title     = {Self-Supervised MultiModal Versatile Networks},
@@ -98,7 +99,6 @@
   volume  = {28},
   number  = {12}
 }
-
 
 @inproceedings{Andersen2009,
   author    = {Andersen, Vedrana and Desbrun, Mathieu and B{\ae}rentzen, J. Andreas and Aan{\ae}s, Henrik},
@@ -131,13 +131,13 @@
   year      = {2016}
 }
 
+
 @article{Armeni2017,
   title   = {Joint {2D-3D}-Semantic Data for Indoor Scene Understanding},
   author  = {Armeni, Iro and Sax, Sasha and Zamir, Amir R and Savarese, Silvio},
   journal = {arXiv preprint},
   year    = {2017}
 }
-
 
 @inproceedings{Arthur2007,
   author    = {Arthur, David and Vassilvitskii, Sergei},
@@ -218,6 +218,7 @@
   year    = {2016}
 }
 
+
 @article{Badrinarayanan2017,
   author  = {Badrinarayanan, Vijay and Kendall, Alex and Cipolla, Roberto},
   title   = {Segnet: A deep convolutional encoder-decoder architecture for image segmentation},
@@ -226,7 +227,6 @@
   volume  = {39},
   number  = {12}
 }
-
 
 @book{Baerentzen2002,
   title     = {Manipulation of volumetric solids with applications to sculpting},
@@ -521,13 +521,13 @@
   year      = {2018}
 }
 
+
 @inproceedings{Caron2018,
   author    = {Caron, Mathilde and Bojanowski, Piotr and Joulin, Armand and Douze, Matthijs},
   title     = {Deep clustering for unsupervised learning of visual features},
   booktitle = ECCV,
   year      = {2018}
 }
-
 
 @inproceedings{Chabra2020,
   title     = {Deep Local Shapes: Learning Local {SDF} Priors for Detailed {3D} Reconstruction},
@@ -552,13 +552,13 @@
   year      = {2017}
 }
 
+
 @inproceedings{Chellapilla2006,
   author    = {Chellapilla, Kumar and Puri, Sidd and Simard, Patrice},
   title     = {High performance convolutional neural networks for document processing},
   booktitle = {International Conference on Frontiers in Handwriting Recognition (ICFHR)},
   year      = {2006}
 }
-
 
 @inproceedings{Chen1990,
   title     = {Shortest paths on a polyhedron},
@@ -621,13 +621,13 @@
   year      = {2019}
 }
 
+
 @inproceedings{Chen2020,
   title     = {A simple framework for contrastive learning of visual representations},
   author    = {Chen, Ting and Kornblith, Simon and Norouzi, Mohammad and Hinton, Geoffrey},
   booktitle = ICML,
   year      = {2020}
 }
-
 
 @inproceedings{Chen2020a,
   title     = {Big Self-Supervised Models are Strong Semi-Supervised Learners},
@@ -644,6 +644,7 @@
   year      = {2020}
 }
 
+
 @inproceedings{Chen2021,
   author    = {Xinlei Chen and Kaiming He},
   title     = {Exploring Simple Siamese Representation Learning},
@@ -658,13 +659,13 @@
   year      = {2022}
 }
 
-
 @inproceedings{Cheng2021,
   title     = {Back-Tracing Representative Points for Voting-based {3D} Object Detection in Point Clouds},
   author    = {Cheng, Bowen and Sheng, Lu and Shi, Shaoshuai and Yang, Ming and Xu, Dong},
   booktitle = CVPR,
   year      = {2021}
 }
+
 
 @inproceedings{Cheng2022,
   title     = {{PatchFormer}: A versatile {3D} transformer based on patch attention},
@@ -673,13 +674,13 @@
   year      = {2021}
 }
 
-
 @inproceedings{Chiang2019,
   title     = {A unified point-based framework for {3D} segmentation},
   author    = {Chiang, Hung-Yueh and Lin, Yen-Liang and Liu, Yueh-Cheng and Hsu, Winston H},
   booktitle = threeDV,
   year      = {2019}
 }
+
 
 @inproceedings{Chibane2020,
   title     = {Implicit functions in feature space for 3d shape reconstruction and completion},
@@ -697,7 +698,6 @@
   number  = {4}
 }
 
-
 @inproceedings{Choy2016,
   author    = {Choy, Christopher and Xu, Danfei and Gwak, JunYoung and Chen, Kevin and Savarese, Silvio},
   title     = {{3D-R2N2}: A unified approach for single and multi-view {3D} object reconstruction},
@@ -712,6 +712,7 @@
   booktitle = CVPR,
   year      = {2019}
 }
+
 
 @article{Chu2021,
   title   = {Conditional positional encodings for vision transformers},
@@ -797,7 +798,6 @@
   year      = {2013}
 }
 
-
 @article{Crane2013a,
   title   = {Geodesics in heat: A new approach to computing distance based on heat flow},
   author  = {Crane, Keenan and Weischedel, Clarisse and Wardetzky, Max},
@@ -807,6 +807,7 @@
   year    = {2013}
 }
 
+
 @misc{cublas2022,
   title        = {{cuBLAS}},
   author       = {cuBLAS},
@@ -814,13 +815,13 @@
   year         = {2022}
 }
 
-
 @inproceedings{Curless1996,
   author    = {Curless, Brian and Levoy, Marc},
   title     = {A Volumetric Method for Building Complex Models from Range Images},
   booktitle = {SIGGRAPH},
   year      = {1996}
 }
+
 
 @article{Cybenko1989,
   title   = {Approximation by superpositions of a sigmoidal function},
@@ -875,13 +876,13 @@
   year      = {2009}
 }
 
-
 @inproceedings{Deng2018,
   title     = {{PPF-FoldNet}: Unsupervised learning of rotation invariant 3D local descriptors},
   author    = {Deng, Haowen and Birdal, Tolga and Ilic, Slobodan},
   booktitle = ECCV,
   year      = {2018}
 }
+
 
 @inproceedings{Desbrun1999,
   author    = {Desbrun, Mathieu and Meyer, Mark and Schr\"{o}der, Peter and Barr, Alan H.},
@@ -906,13 +907,13 @@
   number  = {1}
 }
 
-
 @inproceedings{Doersch2015,
   author    = {Doersch, Carl and Gupta, Abhinav and Efros, Alexei A},
   booktitle = ICCV,
   title     = {Unsupervised visual representation learning by context prediction},
   year      = {2015}
 }
+
 
 @inproceedings{Dollar2010,
   author    = {Doll{\'a}r, Piotr and Welinder, Peter and Perona, Pietro},
@@ -1084,7 +1085,6 @@
   number  = {4}
 }
 
-
 @article{Furuya2019,
   author  = {Takahiko Furuya and Ryutarou Ohbuchi},
   title   = {Feature set aggregator: unsupervised representation learning of sets for their comparison},
@@ -1092,6 +1092,7 @@
   year    = {2019},
   volume  = {78}
 }
+
 
 @inproceedings{Ganapathi2018,
   author    = {Vignesh Ganapathi-Subramanian and Olga Diamanti and Soeren Pirk and Chengcheng Tang and Matthias Nießner and Leonidas J. Guibas},
@@ -1121,7 +1122,6 @@
   year      = {2020}
 }
 
-
 @inproceedings{Gilmer2017,
   title     = {Neural message passing for quantum chemistry},
   author    = {Gilmer, Justin and Schoenholz, Samuel S and Riley, Patrick F and Vinyals, Oriol and Dahl, George E},
@@ -1139,6 +1139,7 @@
   year    = {1977}
 }
 
+
 @inproceedings{Girdhar2016,
   title     = {Learning a predictable and generative vector representation for objects},
   author    = {Girdhar, Rohit and Fouhey, David F and Rodriguez, Mikel and Gupta, Abhinav},
@@ -1153,7 +1154,6 @@
   year      = {2011}
 }
 
-
 @article{Golovinskiy2008,
   author  = {Golovinskiy, Aleksey and Funkhouser, Thomas},
   title   = {Randomized cuts for {3D} mesh analysis},
@@ -1162,6 +1162,7 @@
   volume  = {27},
   number  = {5}
 }
+
 
 @article{Golovinskiy2009,
   author  = {Aleksey Golovinskiy and Thomas Funkhouser},
@@ -1179,7 +1180,6 @@
   publisher = {MIT Press}
 }
 
-
 @inproceedings{Goodfellow2016a,
   author    = {Ian Goodfellow and Jean Pouget-Abadie and Mehdi Mirza and Bing Xu and David Warde-Farley and Sherjil Ozair and Aaron Courville and Yoshua Bengio},
   title     = {Generative adversarial networks},
@@ -1194,6 +1194,7 @@
   booktitle = BMVC,
   year      = {2015}
 }
+
 
 @inproceedings{Graham2018,
   author    = {Benjamin Graham and Martin Engelcke and Laurens van der Maaten},
@@ -1403,7 +1404,6 @@
   year    = {2022}
 }
 
-
 @article{Hassouna2009,
   author  = {M. S. Hassouna and A. A. Farag},
   title   = {Variational curve skeletons using gradient vector flow},
@@ -1430,6 +1430,7 @@
   volume  = {32},
   number  = {4}
 }
+
 
 @inproceedings{He2016,
   title     = {Deep residual learning for image recognition},
@@ -1555,7 +1556,6 @@
   year      = {2016}
 }
 
-
 @article{Huang2018,
   author  = {Huang, Haibin and Kalogerakis, Evangelos and Chaudhuri, Siddhartha and Ceylan, Duygu and Kim, Vladimir G and Yumer, Ersin},
   title   = {Learning local shape descriptors from part correspondences with multiview convolutional networks},
@@ -1575,6 +1575,7 @@
   journal   = {ACM Comput. Surv.},
   articleno = {20}
 }
+
 
 @inproceedings{Izadi2011,
   author    = {Izadi, Shahram and Kim, David and Hilliges, Otmar and Molyneaux, David and Newcombe, Richard and Kohli, Pushmeet and Shotton, Jamie and Hodges, Steve and Freeman, Dustin and Davison, Andrew and Fitzgibbon, Andrew},
@@ -1627,7 +1628,6 @@
   year      = {2020}
 }
 
-
 @article{Jimenez2001,
   author  = {Jim{\'e}nez, Pablo and Thomas, Federico and Torras, Carme},
   title   = {{3D} collision detection: A survey},
@@ -1644,6 +1644,7 @@
   booktitle = CVPR,
   year      = {2016}
 }
+
 
 @article{Johnson1999,
   author  = {Johnson, Andrew E. and Hebert, Martial},
@@ -1823,13 +1824,13 @@
   number  = {3}
 }
 
-
 @article{Kazhdan2020,
   title   = {Poisson Surface Reconstruction with Envelope Constraints},
   author  = {Misha Kazhdan and Ming Chuang and Szymon Rusinkiewicz and Hugues Hoppe},
   journal = SGP,
   year    = {2020}
 }
+
 
 @article{Khosla2020,
   title   = {Supervised contrastive learning},
@@ -2232,13 +2233,13 @@
   year      = {2021}
 }
 
-
 @inproceedings{Liu2021c,
   title     = {Contrastive Multimodal Fusion with {TupleInfoNCE}},
   author    = {Liu, Yunze and Fan, Qingnan and Zhang, Shanghang and Dong, Hao and Funkhouser, Thomas and Yi, Li},
   booktitle = ICCV,
   year      = {2021}
 }
+
 
 @article{Liu2021d,
   title   = {Self-supervised learning: Generative or contrastive},
@@ -2303,7 +2304,6 @@
   year      = {1989}
 }
 
-
 @article{Lu2016,
   author  = {Xuequan Lu and Zhigang Deng and and Wenzhi Chen},
   title   = {A robust scheme for feature-preserving mesh denoising},
@@ -2312,6 +2312,7 @@
   volume  = {22},
   number  = {3}
 }
+
 
 @inproceedings{Lun2017,
   author    = {Zhaoliang Lun and Matheus Gadelha and Evangelos Kalogerakis and Subhransu Maji and Rui Wang},
@@ -2334,13 +2335,13 @@
   year      = {2020}
 }
 
-
 @inproceedings{Ma2022,
   title     = {Rethinking network design and local geometry in point cloud: A simple residual {MLP} framework},
   author    = {Ma, Xu and Qin, Can and You, Haoxuan and Ran, Haoxi and Fu, Yun},
   booktitle = ICLR,
   year      = {2022}
 }
+
 
 @article{Maaten2008,
   author  = {Maaten, Laurens van der and Hinton, Geoffrey},
@@ -2355,7 +2356,6 @@
   booktitle = {Biometrics: Theory Applications and Systems (BTAS)},
   year      = {2010}
 }
-
 
 @inproceedings{Makhzani2016,
   author       = {Alireza Makhzani and Jonathon Shlens and Navdeep Jaitly and Ian J. Goodfellow},
@@ -2375,13 +2375,13 @@
   number  = {6}
 }
 
+
 @inproceedings{Mao2021,
   title     = {Voxel Transformer for {3D} Object Detection},
   author    = {Mao, Jiageng and Xue, Yujing and Niu, Minzhe and Bai, Haoyue and Feng, Jiashi and Liang, Xiaodan and Xu, Hang and Xu, Chunjing},
   booktitle = ICCV,
   year      = {2021}
 }
-
 
 @article{Martel2021,
   title   = {{ACORN}: {Adaptive} coordinate networks for neural scene representation},
@@ -2391,6 +2391,7 @@
   number  = {4},
   year    = {2021}
 }
+
 
 @inproceedings{Masci2015,
   author    = {Jonathan Masci and Davide Boscaini and Michael M. Bronstein and Pierre Vandergheynst},
@@ -2406,7 +2407,6 @@
   year      = {2015}
 }
 
-
 @article{Meagher1982,
   author  = {Donald Meagher},
   title   = {Geometric modeling using octree encoding},
@@ -2414,6 +2414,7 @@
   year    = {1982},
   volume  = {19}
 }
+
 
 @article{Mehra2009,
   author  = {Ravish Mehra and Qingnan Zhou and Jeremy Long and Alla Sheffer and Amy Gooch and Niloy J. Mitra},
@@ -2819,7 +2820,6 @@
   year      = {2008}
 }
 
-
 @article{Rainer2019,
   author  = {Gilles Rainer and Wenzel Jakob and Abhijeet Ghosh and Tim Weyrich},
   title   = {Neural {BTF} Compression and Interpolation},
@@ -2828,6 +2828,7 @@
   number  = {2},
   year    = {2019}
 }
+
 
 @article{Rainer2020,
   author  = {Rainer, Gilles and Ghosh, Abhijeet and Jakob, Wenzel and Weyrich, Tim},
@@ -2844,7 +2845,6 @@
   journal = {arXiv preprint arXiv:2204.06125},
   year    = {2022}
 }
-
 
 @article{Raviv2010,
   title   = {Full and partial symmetries of non-rigid shapes},
@@ -2864,6 +2864,7 @@
   volume  = {29},
   number  = {1}
 }
+
 
 @book{Redko2019,
   title     = {Advances in Domain Adaptation Theory},
@@ -3019,7 +3020,6 @@
   year      = {2015}
 }
 
-
 @article{Schmidt2016,
   author  = {Schmidt, U. and Jancsary, J. and Nowozin, S. and Roth, S. and Rother, C.},
   title   = {Cascades of regression tree fields for image restoration},
@@ -3028,6 +3028,7 @@
   volume  = {38},
   number  = {4}
 }
+
 
 @inproceedings{Sedaghat2016,
   author    = {Nima Sedaghat and Mohammadreza Zolfaghari and Thomas Brox},
@@ -3045,7 +3046,6 @@
   year    = {1999}
 }
 
-
 @article{Shao2012,
   author  = {Shao, Tianjia and Xu, Weiwei and Zhou, Kun and Wang, Jingdong and Li, Dongping and Guo, Baining},
   title   = {An Interactive Approach to Semantic Modeling of Indoor Scenes with an {RGBD} Camera},
@@ -3054,6 +3054,7 @@
   volume  = {31},
   number  = {6}
 }
+
 
 @article{Shao2018,
   title   = {{H-CNN}: spatial hashing based {CNN} for {3D} shape analysis},
@@ -3111,13 +3112,13 @@
   year      = {2018}
 }
 
-
 @article{Sharma2018a,
   author  = {Sharma, Rishi and Barratt, Shane and Ermon, Stefano and Pande, Vijay},
   title   = {Improved training with curriculum {GANs}},
   journal = {arXiv preprint arXiv:1807.09295},
   year    = {2018}
 }
+
 
 @article{Sharp2020,
   title   = {You can find geodesic paths in triangle meshes by just flipping edges},
@@ -3137,7 +3138,6 @@
   number  = {3}
 }
 
-
 @article{Shen2012,
   author  = {Shen, Chao-Hui and Fu, Hongbo and Chen, Kang and Hu, Shi-Min},
   title   = {{Structure Recovery by Part Assembly}},
@@ -3146,6 +3146,7 @@
   volume  = {31},
   number  = {6}
 }
+
 
 @article{Shi2006,
   author  = {Shi, Lin and Yu, Yizhou and Bell, Nathan and Feng, Wei-Wen},
@@ -3208,7 +3209,6 @@
   year      = {2017}
 }
 
-
 @inproceedings{Sinha2016,
   author    = {Ayan Sinha and Jing Bai and Karthik Ramani},
   title     = {Deep learning {3D} shape surfaces using geometry images},
@@ -3224,6 +3224,7 @@
   year      = {2017}
 }
 
+
 @article{Sirignano2018,
   title   = {{DGM}: A deep learning algorithm for solving partial differential equations},
   author  = {Sirignano, Justin and Spiliopoulos, Konstantinos},
@@ -3231,13 +3232,13 @@
   year    = {2018}
 }
 
-
 @inproceedings{Sitzmann2019,
   title     = {Scene representation networks: Continuous {3D}-structure-aware neural scene representations},
   author    = {Sitzmann, Vincent and Zollh{\"o}fer, Michael and Wetzstein, Gordon},
   booktitle = NeurIPS,
   year      = {2019}
 }
+
 
 @inproceedings{Sitzmann2020,
   title     = {Implicit Neural Representations with Periodic Activation Functions},
@@ -3282,7 +3283,6 @@
   year         = {2019}
 }
 
-
 @inproceedings{Sorkine2004,
   author    = {Sorkine, O. and Cohen-Or, D. and Lipman, Y. and Alexa, M. and R\"{o}ssl, C. and Seidel, H.-P.},
   title     = {Laplacian surface editing},
@@ -3300,6 +3300,7 @@
   number  = {1}
 }
 
+
 @inproceedings{Stutz2018,
   author    = {Stutz, David and Geiger, Andreas},
   booktitle = CVPR,
@@ -3307,13 +3308,13 @@
   year      = {2018}
 }
 
-
 @inproceedings{Su2015,
   author    = {Su, Hang and Maji, Subhransu and Kalogerakis, Evangelos and Learned-Miller, Erik},
   title     = {Multi-view convolutional neural networks for {3D} shape recognition},
   booktitle = ICCV,
   year      = {2015}
 }
+
 
 @inproceedings{Su2018,
   author    = {Hang Su and Varun Jampani and Deqing Sun and Subhransu Maji and Evangelos Kalogerakis and Ming-Hsuan Yang and Jan Kautz},
@@ -3382,7 +3383,6 @@
   year      = {2015}
 }
 
-
 @inproceedings{Sun2022,
   title     = {{SWFormer}: Sparse Window Transformer for {3D} Object Detection in Point Clouds},
   author    = {Sun, Pei and Tan, Mingxing and Wang, Weiyue and Liu, Chenxi and Xia, Fei and Leng, Zhaoqi and Anguelov, Dragomir},
@@ -3399,6 +3399,7 @@
   volume  = {34},
   number  = {6}
 }
+
 
 @article{Surazhsky2005,
   title   = {Fast exact and approximate geodesics on meshes},
@@ -3462,7 +3463,6 @@
   year      = {2021}
 }
 
-
 @inproceedings{Tang2021a,
   title     = {{SA-ConvONet}: Sign-Agnostic Optimization of Convolutional Occupancy Networks},
   author    = {Tang, Jiapeng and Lei, Jiabao and Xu, Dan and Ma, Feiying and Jia, Kui and Zhang, Lei},
@@ -3479,6 +3479,7 @@
   volume  = {23},
   number  = {3}
 }
+
 
 @inproceedings{Tasdizen2002,
   author    = {Tasdizen, Tolga and Whitaker, Ross and Burchard, Paul and Osher, Stanley},
@@ -3522,7 +3523,6 @@
   year      = {2020}
 }
 
-
 @inproceedings{Tobin2017,
   title     = {Domain randomization for transferring deep neural networks from simulation to the real world},
   author    = {Tobin, Josh and Fong, Rachel and Ray, Alex and Schneider, Jonas and Zaremba, Wojciech and Abbeel, Pieter},
@@ -3538,13 +3538,13 @@
   year      = {1998}
 }
 
+
 @inproceedings{Tulsiani2017,
   author    = {Tulsiani, Shubham and Zhou, Tinghui and Efros, Alexei A and Malik, Jitendra},
   title     = {Multi-view supervision for single-view reconstruction via differentiable ray consistency},
   booktitle = CVPR,
   year      = {2017}
 }
-
 
 @inproceedings{Tulsianiand2017,
   author    = {Shubham Tulsianiand and Hao Su and Leonidas J. Guibas and Alexei A. Efros and Jitendra Malik},
@@ -3560,6 +3560,7 @@
   booktitle = threeDV,
   year      = {2017}
 }
+
 
 @inproceedings{Ulyanov2018,
   title     = {Deep image prior},
@@ -3584,13 +3585,13 @@
   number  = {2}
 }
 
-
 @inproceedings{Vaswani2017,
   author    = {Vaswani, Ashish and Shazeer, Noam and Parmar, Niki and Uszkoreit, Jakob and Jones, Llion and Gomez, Aidan N and Kaiser, {\L}ukasz and Polosukhin, Illia},
   title     = {Attention is all you need},
   booktitle = NeurIPS,
   year      = {2017}
 }
+
 
 @inproceedings{Velickovic2018,
   title     = {Graph Attention Networks},
@@ -3613,7 +3614,6 @@
   booktitle = ICCV
 }
 
-
 @article{Wang2012,
   author  = {Jun Wang and Xi Zhang and Zeyun Yu},
   title   = {A cascaded approach for feature-preserving surface mesh denoising},
@@ -3632,6 +3632,7 @@
   volume  = {33},
   number  = {2}
 }
+
 
 @article{Wang2015,
   author  = {Wang, Peng-Shuai and Fu, Xiao-Ming and Liu, Yang and Tong, Xin and Liu, Shi-Lin and Guo, Baining},
@@ -3866,7 +3867,6 @@
   year      = {2022}
 }
 
-
 @article{Wu2005,
   author  = {Jianhua Wu and Leif Kobbelt},
   title   = {Structure recovery via hybrid variational surface approximation},
@@ -3883,6 +3883,7 @@
   booktitle = CVPR,
   year      = {2015}
 }
+
 
 @inproceedings{Wu2016,
   author    = {Jiajun Wu and Chengkai Zhang and Tianfan Xue and William T. Freeman and Joshua B. Tenenbaum},
@@ -3953,13 +3954,13 @@
   year      = {2021}
 }
 
-
 @inproceedings{Wu2022,
   title     = {Point Transformer V2: Grouped Vector Attention and Partition-based Pooling},
   author    = {Wu, Xiaoyang and Lao, Yixing and Jiang, Li and Liu, Xihui and Zhao, Hengshuang},
   booktitle = NeurIPS,
   year      = {2022}
 }
+
 
 @article{Xia2021,
   title   = {{GeodesicEmbedding (GE)}: a high-dimensional embedding approach for fast geodesic distance queries},
@@ -3998,7 +3999,6 @@
   year      = {2020}
 }
 
-
 @inproceedings{Xie2021,
   title     = {{Propagate Yourself}: Exploring Pixel-Level Consistency for Unsupervised Visual Representation Learning},
   author    = {Xie, Zhenda and Lin, Yutong and Zhang, Zheng and Cao, Yue and Lin, Stephen and Hu, Han},
@@ -4013,6 +4013,7 @@
   booktitle = ICCV,
   year      = {2021}
 }
+
 
 @article{Xin2009,
   title   = {Improving {Chen and Han}'s algorithm on the discrete geodesic problem},
@@ -4092,7 +4093,6 @@
   year      = {2002}
 }
 
-
 @inproceedings{Yagou2003,
   author    = {Yagou, H. and Ohtake, Y. and Belyaev, A.G.},
   title     = {Mesh denoising via iterative alpha-trimming and nonlinear diffusion of normals with automatic thresholding},
@@ -4108,6 +4108,7 @@
   title     = {Quadric Surface Extraction by Variational Shape Approximation},
   year      = {2006}
 }
+
 
 @inproceedings{Yan2016,
   author    = {Xinchen Yan and Jimei Yang and Ersin Yumer and Yijie Guo and Honglak Lee},
@@ -4130,7 +4131,6 @@
   year      = {2020}
 }
 
-
 @article{Yang2015,
   title   = {{Go-ICP}: A globally optimal solution to {3D ICP} point-set registration},
   author  = {Yang, Jiaolong and Li, Hongdong and Campbell, Dylan and Jia, Yunde},
@@ -4148,6 +4148,7 @@
   year      = {2017}
 }
 
+
 @article{Yang2018,
   author  = {Yang, Bo and Rosa, Stefano and Markham, Andrew and Trigoni, Niki and Wen, Hongkai},
   title   = {Dense {3D} object reconstruction from a single depth view},
@@ -4162,13 +4163,13 @@
   year      = {2018}
 }
 
-
 @article{Yang2020,
   title   = {Mapping in a cycle: Sinkhorn regularized unsupervised learning for point cloud shapes},
   author  = {Yang, Lei and Liu, Wenxi and Cui, Zhiming and Chen, Nenglun and Wang, Wenping},
   journal = ECCV,
   year    = {2020}
 }
+
 
 @inproceedings{Yang2021,
   title     = {Focal Self-attention for Local-Global Interactions in Vision Transformers},
@@ -4218,7 +4219,6 @@
   number  = {4}
 }
 
-
 @article{Ying2013,
   title   = {Saddle vertex graph ({SVG}) a novel solution to the discrete geodesic problem},
   author  = {Ying, Xiang and Wang, Xiaoning and He, Ying},
@@ -4246,6 +4246,7 @@
   year      = {2018}
 }
 
+
 @article{Yu2004,
   author  = {Yu, Yizhou and Zhou, Kun and Xu, Dong and Shi, Xiaohan and Bao, Hujun and Guo, Baining and Shum, Heung-Yeung},
   title   = {Mesh editing with Poisson-based gradient field manipulation},
@@ -4262,7 +4263,6 @@
   year      = {2018}
 }
 
-
 @inproceedings{Yu2019,
   author    = {Fenggen Yu and Kun Liu and Yan Zhang and Chenyang Zhu and Kai Xu},
   booktitle = CVPR,
@@ -4277,6 +4277,7 @@
   booktitle = CVPR,
   year      = {2021}
 }
+
 
 @inproceedings{Yu2022,
   title     = {{Point-BERT}: Pre-training {3D} point cloud transformers with masked point modeling},
@@ -4306,7 +4307,6 @@
   year      = {2009}
 }
 
-
 @inproceedings{Zeiler2014,
   author    = {Matthew D. Zeiler and Rob Fergus},
   title     = {Visualizing and understanding convolutional networks},
@@ -4314,13 +4314,13 @@
   year      = {2014}
 }
 
+
 @inproceedings{Zeng2017,
   title     = {{3DMatch}: Learning local geometric descriptors from {RGBD} reconstructions},
   author    = {Zeng, Andy and Song, Shuran and Nie{\ss}ner, Matthias and Fisher, Matthew and Xiao, Jianxiong and Funkhouser, Thomas},
   booktitle = CVPR,
   year      = {2017}
 }
-
 
 @article{Zhang2010,
   author  = {Zhang, Hao and Van Kaick, Oliver and Dyer, Ramsay},
@@ -4330,6 +4330,7 @@
   volume  = {29},
   number  = {6}
 }
+
 
 @article{Zhang2012,
   author  = {Zhang, Juyong and Zheng, Jianmin and Wu, Chunlin and Cai, Jianfei},
@@ -4346,7 +4347,6 @@
   booktitle = {ECCV},
   year      = {2014}
 }
-
 
 @article{Zhang2015,
   author  = {Zhang, Huayan and Wu, Chunlin and Zhang, Juyong and Deng, Jiansong},
@@ -4367,6 +4367,7 @@
   issue   = {7}
 }
 
+
 @inproceedings{Zhang2016,
   author    = {Zhang, Richard and Isola, Phillip and Efros, Alexei A},
   booktitle = ECCV,
@@ -4374,13 +4375,13 @@
   year      = {2016}
 }
 
-
 @inproceedings{Zhang2018,
   author    = {Zhang, Jiahui and Zhao, Hao and Yao, Anbang and Chen, Yurong and Zhang, Li and Liao, Hongen},
   title     = {Efficient semantic scene completion network with spatial group convolution},
   booktitle = ECCV,
   year      = {2018}
 }
+
 
 @inproceedings{Zhang2018a,
   title     = {mixup: Beyond Empirical Risk Minimization},
@@ -4489,7 +4490,6 @@
   year      = {2020}
 }
 
-
 @article{Zhou2006,
   author  = {Zhou, Kun and Huang, Xin and Wang, Xi and Tong, Yiying and Desbrun, Mathieu and Guo, Baining and Shum, Heung-Yeung},
   title   = {Mesh quilting for geometric texture synthesis},
@@ -4498,6 +4498,7 @@
   volume  = {25},
   number  = {3}
 }
+
 
 @article{Zhou2011,
   author  = {Zhou, Kun and Gong, Minmin and Huang, Xin and Guo, Baining},
@@ -4543,7 +4544,6 @@
   booktitle = CVPR
 }
 
-
 @article{Zigelman2002,
   title   = {Texture mapping using surface flattening via multidimensional scaling},
   author  = {Zigelman, Gil and Kimmel, Ron and Kiryati, Nahum},
@@ -4553,9 +4553,17 @@
   year    = {2002}
 }
 
+
 @inproceedings{Zou2017,
   author    = {Chuhang Zou and Ersin Yumer and Jimei Yang and Duygu Ceylan and Derek Hoiem},
   title     = {{3D-PRNN}: Generating shape primitives with recurrent neural networks},
   booktitle = ICCV,
   year      = {2017}
+}
+
+@inproceedings{Zwicker2001,
+  title     = {Surface splatting},
+  author    = {Zwicker, Matthias and Pfister, Hanspeter and Van Baar, Jeroen and Gross, Markus},
+  booktitle = {SIGGRAPH},
+  year      = {2001}
 }
