--- a/reference.bib
+++ b/reference.bib
@@ -29,6 +29,14 @@
 @String { TVCG     = {IEEE. T. Vis. Comput. Gr.} }
 
 
+@inproceedings{Arsalan2017,
+  title={Synthesizing {3D} shapes via modeling multi-view depth maps and silhouettes with deep generative networks},
+  author={Arsalan Soltani, Amir and Huang, Haibin and Wu, Jiajun and Kulkarni, Tejas D and Tenenbaum, Joshua B},
+  booktitle=CVPR,
+  year={2017}
+}
+
+
 @inproceedings{Achlioptas2018,
   author    = {Panos Achlioptas and Olga Diamanti and Ioannis Mitliagkas and Leonidas J. Guibas},
   title     = {Learning representations and generative models for {3D} point clouds},
